# langchain-telugu

./: LICENSE  README.md  ebook_content.md  pyproject.toml  requirements.txt  todo.md  youtube_content_plan.md
01-Basic/: 01-OpenAI-APIKey.ipynb  02-OpenAI-LLM.ipynb  03-LCEL.ipynb  04-LCEL-Advanced.ipynb  05-Runnable.ipynb
02-Prompt/: 01-Prompt-Engineering-Basics.ipynb  02-Advanced-Prompt-Engineering.ipynb
03-OutputParser/: 01-OutputParser-Basics.ipynb
04-Memory/: 01-Memory-Basics.ipynb
05-Chains/: 01-Chains-Basics.ipynb
06-LangGraph/: 01-LangGraph-Basics.ipynb
07-RAG/: 01-RAG-Basics.ipynb
